--- a/resume_zhenghao_yin_kyoto_u.tex
+++ b/resume_zhenghao_yin_kyoto_u.tex
@@ -1,3 +1,9 @@
+% !TeX document-id = {c3c875d8-04c7-4066-b711-eba665723f62}
+% !TeX root = ./resume_zhenghao_yin_kyoto_u.tex
+% !TEX program = xelatex
+% !BIB program = biber
+% !TEX encoding = UTF-8 Unicode
+% !TEX options = --shell-escape -synctex=1 -interaction=nonstopmode -file-line-error "%DOC%"
 %%%%%%%%%%%%%%%%%
 % This is an example CV created using altacv.cls (v1.1.4, 27 July 2018) written by
 % LianTze Lim (liantze@gmail.com), based on the
@@ -98,7 +104,7 @@
 %% You can always just use \marginpar{...} if you do
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
-\cvsection[page1sidebar]{Research}
+\cvsection[page1sidebar_en]{Research}
 
 \cvevent{Broadband frequency entangled photon generation using silicon nitride ring cavities}{with Prof. Shigeki Takeuchi}{2017/10 -- Present}{Kyoto University, Japan}
 We are collaborating with Yokoyama Lab at Kyushu Univ., and focusing on realization of on-chip high-intensity broadband entangled photon sources based on SiNx and other material platforms.
@@ -146,7 +152,7 @@ My initial research interest in Malab was QKD and Bell states generation and fin
 
 \clearpage
 
-\cvsection[page2sidebar]{Conferences}
+\cvsection[page2sidebar_en]{Conferences}
 
 \cvevent{Design and fabrication of a silicon nitride ring resonator for on-chip broadband entangled photon sources  (oral)}{The 80th JSAP Autumn Meeting 2019, JSAP-OSA Joint Symposia}{2019/09}{Sapporo, Japan}
 \cvevent{Research of CVD methods for impacts on dispersion in a SiNx ring resonator (oral \& poster)}{The 38th Electronic Materials Symposium}
