--- a/page1sidebar_zh.tex
+++ b/page1sidebar_zh.tex
@@ -5,11 +5,11 @@
 
 \cvsection{教育经历}
 
-\cvevent{工学~硕士 （在读）}{京都大学工学研究科电子工学专攻}{2017/10 -- 至今}{日本~京都}
+\cvevent{电子工学~修士}{京都大学工学研究科电子工学专攻}{2017/10 --2020/03}{日本~京都}
 
 \divider
 
-\cvevent{物理学~学士}{南京大学物理学院}{2013/09 -- 2017/06}{中国~
+\cvevent{物理学~学士}{南京大学物理学院物理系}{2013/09 -- 2017/06}{中国~
 南京}
 
 
@@ -31,19 +31,22 @@
 
 \cvsection{基本技能}
 \cvachievement{\faFlask}{实验技术}{
+\cvtag{光纤处理}
+\cvtag{版图设计}
 \cvtag{微纳加工}
-\cvtag{FDTD/FEM 模拟}
-\cvtag{NI LabVIEW}
+\cvtag{金属加工}
 }
 \smallskip
 \cvachievement{\faDatabase}{编程技能}{
 \cvtag{MATLAB/Mathematica}
-\cvtag{Latex}
+\cvtag{LaTex}
 \cvtag{Python} 
 \cvtag{C/C++}
+\cvtag{FDTD/FEM 模拟}
+\cvtag{NI LabVIEW}
 }
 \smallskip
-\cvachievement{\faCoffee}{业余能力}{
+\cvachievement{\faCoffee}{业余爱好}{
 \cvtag{Web 开发}
 \cvtag{Linux/Unix 开发} 
 }
@@ -53,13 +56,13 @@
 \cvevent{{\Large\color{accent}\faTrophy}~~二等奖}{第十二届全国高等学校物理演示教学仪器展示}
 {2015十月}{中国~苏州}
 
-\cvsection{语言水平}
+\cvsection{语言能力}
 
-\cvskill{中文}{5}
+%\cvskill{中文}{5}
 % \divider
 \cvskill{英语}{4}
 % \divider
-\cvskill{日语}{3}
+\cvskill{日语}{4}
 % \divider
 
 \cvskill{德语}{1}
