--- a/resume_zhenghao_yin_kyoto_u.tex
+++ b/resume_zhenghao_yin_kyoto_u.tex
@@ -152,13 +152,7 @@ My initial research interest in Malab was QKD and Bell states generation and fin
 
 \clearpage
 
-\cvsection[page2sidebar_en]{Conferences}
-
-\cvevent{Design and fabrication of a silicon nitride ring resonator for on-chip broadband entangled photon sources  (oral)}{The 80th JSAP Autumn Meeting 2019, JSAP-OSA Joint Symposia}{2019/09}{Sapporo, Japan}
-\cvevent{Research of CVD methods for impacts on dispersion in a SiNx ring resonator (oral \& poster)}{The 38th Electronic Materials Symposium}
-{2019/10}{Nara, Japan}
-\cvevent{On-chip broadband entangled photon sources using HICDG and SiN waveguide devices (poster)}{EU-USA-Japan International Symposium on Quantum Technology}
-{2019/12}{Kyoto, Japan}
+\cvsection[page2sidebar_en]{Conferences and Publication}
 
 % \cvevent{2nd National Conference on Condensed Matter Physics}{}
 % {July 2015}{Nanjing, China}
@@ -166,21 +160,18 @@ My initial research interest in Malab was QKD and Bell states generation and fin
 % {October 2015}{Suzhou, China}
 % \cvevent{2014 Physics Summer School for Top Students in Zhejiang University}{}
 % {July 2014}{Hangzhou, China}
- 
 
-% \cvsection{Publications}
+\nocite{*}
 
-% \nocite{*}
+%\printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
 
-% \printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
+%\divider
 
-% \divider
+\printbibliography[heading=pubtype,title={\printinfo{\faFileTextO}{Journal Articles}}, type=article]
 
-% \printbibliography[heading=pubtype,title={\printinfo{\faFileTextO}{Journal Articles}}, type=article]
+\divider
 
-% \divider
-
-% \printbibliography[heading=pubtype,title={\printinfo{\faGroup}{Conference Proceedings}},type=inproceedings]
+\printbibliography[heading=pubtype,title={\printinfo{\faGroup}{Conference Proceedings}},type=inproceedings]
 
 % % If the NEXT page doesn't start with a \cvsection but you'd
 % % still like to add a sidebar, then use this command on THIS
