--- a/sample.bib
+++ b/sample.bib
@@ -8,38 +8,28 @@ PAGES= {327--344},
 YEAR={2000}
 }
 
-@ARTICLE{Codishetal2000,
-AUTHOR={M. Codish and K. Marriott and C.K. Taboch},
-TITLE={Improving program analyses by structure untupling},
-JOURNAL={Journal of Logic Programming},
-VOLUME= {43},
-ISSUE = {3},
-PAGES= {251--263},
-YEAR={2000}
+@inproceedings{jsap,
+	title={Design and fabrication of a silicon nitride ring resonator for on-chip broadband entangled photon sources},
+	author={Zhenghao Yin and Kenta Sugiura and Xiaoyang Cheng and Hideaki Takashima and Ryo Okamoto and Shiyoshi Yokoyama and Shigeki Takeuchi},
+	publisher = {The 80th JSAP Autumn Meeting 2019, JSAP-OSA Joint Symposia},
+	address = {Sapporo, Japan},
+	year = {2019}
 }
 
-@inproceedings{Huetal2000,
-author = {J. Hu and H.R. Wu and A. Jennings and X. Wang},
-title = {Fast and robust equalization: A case study},
-booktitle = {Proceedings of the World Multiconference on Systemics, Cybernetics and Informatics, (SCI 2000), Florida, USA, 23-26 July 2000},
-publisher = {International Institute of Informatics and Systemics},
-address = {FL, USA},
-pages = {398--403},
-year = {2000}
+@inproceedings{ems38,
+	title={Research of CVD methods for impacts on dispersion in a SiNx ring resonator},
+	author = {Zhenghao Yin  and Kenta Sugiura and Xiaoyang Cheng and Hideaki Takashima and Ryo Okamoto and Shiyoshi Yokoyama and Shigeki Takeuchi},
+	publisher = {The 38th Electronic Materials Symposium},
+	address = {Nara, Japan},
+	year = {2019}
 }
 
-@Book{Conway2000,
-author = {Damian Conway},
-title = {Object {O}riented {P}erl: {A} comprehensive guide to concepts and programming techniques},
-publisher = {Manning Publications Co.},
-year = {2000},
-address = {Connecticut, USA}
+@inproceedings{isqt,
+	title={On-chip broadband entangled photon sources using HICDG and SiN waveguide devices (poster)},
+	author={Kenta Sugiura and Zhenghao Yin and Xiaoyang Cheng and Hideaki Takashima and Ryo Okamoto and Labao Zhang and Lin Kang and Jian Chen and Peiheng Wu and Sai T. Chu and Brent E. Little and Shiyoshi Yokoyama and Shigeki Takeuchi},
+	publisher = {EU-USA-Japan International Symposium on Quantum Technology},
+	address = {Kyoto, Japan},
+	year = {2019}
 }
 
-@inproceedings{zou2013bilingual,
-  title={Bilingual Word Embeddings for Phrase-Based Machine Translation.},
-  author={Zou, Will Y and Socher, Richard and Cer, Daniel M and Manning, Christopher D},
-  booktitle={EMNLP},
-  pages={1393--1398},
-  year={2013}
-}
+
